--- a/z1_Wasi.html
+++ b/z1_Wasi.html
@@ -1,1 +1,16 @@
-
+ <!DOCTYPE html>  
+<html lang="pl-PL">  
+<HTML> 
+<HEAD> 
+<meta charset="utf-8">   
+<TITLE>Osadzanie pliku JS-Wasilewska</TITLE> 
+</HEAD> 
+<BODY> 
+<SCRIPT> 
+document.write("%%%%%%%%%".fontcolor("#808080")+"<br>"); 
+document.write("%".fontcolor("#808080")+"&nbsp;&nbsp;&nbsp;Kasia".fontcolor("lime")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;%".fontcolor("#808080")+"<br>"); 
+document.write("%".fontcolor("#808080")+"&nbsp;&nbsp;&nbsp;Wasilewska".fontcolor("lime")+"&nbsp;&nbsp;%".fontcolor("#808080")+"<br>"); 
+document.write("%%%%%%%%%".fontcolor("#808080")+"<br>"); 
+</SCRIPT> 
+</BODY> 
+</HTML> 
