--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 <TITLE>Osadzanie pliku JS-Wasilewska</TITLE> 
 </HEAD> 
 <BODY> 
-<SCRIPT> 
-document.write("%%%%%%%%%".fontcolor("#808080")+"<br>"); 
-document.write("%".fontcolor("#808080")+"&nbsp;&nbsp;&nbsp;Kasia".fontcolor("lime")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;%".fontcolor("#808080")+"<br>"); 
-document.write("%".fontcolor("#808080")+"&nbsp;&nbsp;&nbsp;Wasilewska".fontcolor("lime")+"&nbsp;&nbsp;%".fontcolor("#808080")+"<br>"); 
-document.write("%%%%%%%%%".fontcolor("#808080")+"<br>"); 
-</SCRIPT> 
+<a href="z1_Wasi.html" target="strony">Zadanie1</a> 
 </BODY> 
 </HTML> 
+
