--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <TITLE>Osadzanie pliku JS-Wasilewska</TITLE> 
 </HEAD> 
 <BODY> 
-<a href="z1_Wasi.html" target="strony">Zadanie1</a> 
+<a href="z1_Wasi.html">Zadanie1</a> 
 </BODY> 
 </HTML> 
+
 
