--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>  
+<!DOCTYPE html>  
 <html lang="pl-PL">  
 <HTML> 
 <HEAD> 
@@ -7,7 +7,9 @@
 </HEAD> 
 <BODY> 
 <a href="z1_Wasi.html">Zadanie1</a> 
+<a href="z2_Wasi.html">Zadanie2</a>
 </BODY> 
 </HTML> 
+
 
 
