--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </HEAD> 
 <BODY> 
 <a href="z1_Wasi.html">Zadanie1</a> 
-<a href="z2_Wasi.html">Zadanie2</a>
+<a href="Zadanie2_Wasilewska.html">Zadanie2</a>
 </BODY> 
 </HTML> 
+
 
 
 
