--- a/Zadanie2_Wasilewska.html
+++ b/Zadanie2_Wasilewska.html
@@ -6,6 +6,6 @@
           <TITLE>SKRYPT zewnętrzny-Wasiewska</TITLE> 
 </HEAD> 
 <BODY> 
-        <SCRIPT type="text/javascript" src="Wasi_zewnetrzny.js"></SCRIPT> 
+        <SCRIPT type="text/javascript" src="Wasilewska_zewnetrzny.js"></SCRIPT> 
 </BODY>
 </HTML>
