--- a/zadanie3_Was.html
+++ b/zadanie3_Was.html
@@ -1,6 +1,6 @@
 <html> 
      <head> 
-            <title> Tutaj wpisz Twoje nazwisko i klasę</title> 
+            <title> Wasilewska3F</title> 
           <script language="JavaScript"> 
              function WinOpen()  
                { 
@@ -10,7 +10,7 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
       </head> 
 <body> 
    <form> 
-  <input type="button" name="zadanie3" value="zadanie3-nazwisko ucznia" onclick="WinOpen(' ')"> 
+  <input type="button" name="zadanie3" value="zadanie3-Wasilewska" onclick="WinOpen(' ')"> 
     </form> 
 </body> 
 </html>
