--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <BODY> 
 <a href="z1_Wasi.html">Zadanie1</a> 
 <a href="Zadanie2_Wasilewska.html">Zadanie2</a>
+<a href="zadanie3_Was.html">Zadanie3</a>
+
 </BODY> 
 </HTML> 
+
 
 
 
