--- a/zadanie3_Was.html
+++ b/zadanie3_Was.html
@@ -24,6 +24,10 @@ window.open("zadanie4_Was.html","okienko_z4","toolbar=no,directories=no,menubar=
  {
 window.open("zadanie5_Was.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=300,width=1100,top=730,left=50");
  }
+	function WinOpen_z6() 
+ {
+window.open("zadanie6_Was.html","okienko_z6","toolbar=no,directories=no,menubar=no,height=300,width=1100,top=730,left=50");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -43,6 +47,7 @@ function okno_zamknij()
 	<input type="button" name="zadanie3-Wasilewska" value="zadanie3-Wasilewska" onclick="WinOpen_3(' ')"> 
 	<input type="button" name="zadanie4-Wasilewska" value="zadanie4-Wasilewska" onclick="WinOpen_z4(' ')"> 
 	<input type="button" name="zadanie5-Wasilewska" value="zadanie5-Wasilewska" onclick="WinOpen_z5(' ')">
+	<input type="button" name="zadanie6-Wasilewska" value="zadanie6-Wasilewska" onclick="WinOpen_z6(' ')">
 
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
     </form> 
