--- a/zadanie6_Was.html
+++ b/zadanie6_Was.html
@@ -6,20 +6,20 @@
 </head>
 <body>
 	<p><b>1) Rodzaje okienek.</b><br>
-alert -  wyświetlająca okienko dialogowe z informacją i przyciskiem OK, </p> <br>
+alert -  wyświetlająca okienko dialogowe z informacją i przyciskiem OK, </p> 
 prompt – generująca okno, w którym użytkownik może wpisać wartość, zwracaną następnie do programu. /p> <br>
 confirm - służy do tego, aby użytkownik coś potwierdził /p> <br>
 
 	<p><b>2) Konwersja liczb .</b><br>
-String - Typ tekstowy  </p> <br>
-Boolea - Typ logiczny  </p> <br>
-Null - Pusta zawartość  </p> <br>
-Undefined - Typ niezidentyfikowany  </p> <br>
+String - Typ tekstowy  </p> 
+Boolea - Typ logiczny  </p> 
+Null - Pusta zawartość  </p> 
+Undefined - Typ niezidentyfikowany  </p> 
 
   <p><b>3) Przy nadawaniu nazw zmiennym należy przestrzegać pewnych zasad:</b><br>
-- Musi się zaczynać od litery, znaku "$" lub "_", może zawierać tylko litery (bez polskich znaków), cyfry oraz "$" i "_". </p> <br>
-- Wielkość liter ma znaczenie. </p> <br>
-- Należy nie używać słów kluczowych JavaScript jako nazw zmiennych.  </p> <br>
+- Musi się zaczynać od litery, znaku "$" lub "_", może zawierać tylko litery (bez polskich znaków), cyfry oraz "$" i "_". </p> 
+- Wielkość liter ma znaczenie. </p> 
+- Należy nie używać słów kluczowych JavaScript jako nazw zmiennych.  </p>
   
 </body>
 </html>
