--- a/zadanie6_Was.html
+++ b/zadanie6_Was.html
@@ -5,7 +5,7 @@
     <title>Zadanie 6 - Pytania</title>
 </head>
 <body>
-	<p><b>1) Rodzaje okienek.a </b>b></p> 
+	<p><b>1) Rodzaje okienek.a </b></p> 
 alert -  wyświetlająca okienko dialogowe z informacją i przyciskiem OK, </p> 
 prompt – generująca okno, w którym użytkownik może wpisać wartość, zwracaną następnie do programu. /p> 
 confirm - służy do tego, aby użytkownik coś potwierdził /p> 
