--- a/zadanie6_Was.html
+++ b/zadanie6_Was.html
@@ -7,8 +7,8 @@
 <body>
 	<p><b>1) Rodzaje okienek.a </b></p> 
 alert -  wyświetlająca okienko dialogowe z informacją i przyciskiem OK, </p> 
-prompt – generująca okno, w którym użytkownik może wpisać wartość, zwracaną następnie do programu. /p> 
-confirm - służy do tego, aby użytkownik coś potwierdził /p> 
+prompt – generująca okno, w którym użytkownik może wpisać wartość, zwracaną następnie do programu. </p> 
+confirm - służy do tego, aby użytkownik coś potwierdził </p> 
 
 	<p><b>2) Konwersja liczb .</b><br>
 String - Typ tekstowy  </p> 
