--- a/zadanie6_Was.html
+++ b/zadanie6_Was.html
@@ -11,15 +11,20 @@ prompt – generująca okno, w którym użytkownik może wpisać wartość, zwra
 confirm - służy do tego, aby użytkownik coś potwierdził </p> 
 
 	<p><b>2) Konwersja liczb</b><br>
-String - Typ tekstowy  </p> 
-Boolea - Typ logiczny  </p> 
-Null - Pusta zawartość  </p> 
-Undefined - Typ niezidentyfikowany  </p> 
+ - parseFloat(zmienna) - konwersja zmiennej do typu float </p>
+ - parseInt(zmienna) - konwersja zmiennej do typu int (liczbowego) </p>
+ - toString(zmienna) - konwersja zmiennej do typu łańcuchowego </p>
 
   <p><b>3) Przy nadawaniu nazw zmiennym należy przestrzegać pewnych zasad:</b><br>
 - Musi się zaczynać od litery, znaku "$" lub "_", może zawierać tylko litery (bez polskich znaków), cyfry oraz "$" i "_". </p> 
 - Wielkość liter ma znaczenie. </p> 
 - Należy nie używać słów kluczowych JavaScript jako nazw zmiennych.  </p>
+
+  <p><b>4) Typy zmiennych:</b><br>
+- String - Typ tekstowy   </p> 
+- Boolea - Typ logiczny  </p> 
+- Null - Pusta zawartość  </p>
+- Undefined - Typ niezidentyfikowany </p>
   
 </body>
 </html>
