--- a/zadanie3_Was.html
+++ b/zadanie3_Was.html
@@ -28,6 +28,10 @@ window.open("zadanie5_Was.html","okienko_z5","toolbar=no,directories=no,menubar=
  {
 window.open("zadanie6_Was.html","okienko_z6","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=200");
  }
+function WinOpen_z7() 
+ {
+window.open("zadanie7_Was.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=200");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -48,6 +52,7 @@ function okno_zamknij()
 	<input type="button" name="zadanie4-Wasilewska" value="zadanie4-Wasilewska" onclick="WinOpen_z4(' ')"> 
 	<input type="button" name="zadanie5-Wasilewska" value="zadanie5-Wasilewska" onclick="WinOpen_z5(' ')">
 	<input type="button" name="zadanie6-Wasilewska" value="zadanie6-Wasilewska" onclick="WinOpen_z6(' ')">
+	<input type="button" name="zadanie7-Wasilewska" value="zadanie6-Wasilewska" onclick="WinOpen_z7(' ')">
 
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
     </form> 
