--- a/zadanie7_Was.html
+++ b/zadanie7_Was.html
@@ -3,6 +3,8 @@
      <script type="text/javascript"> function show_alert() { alert("Uwaga!"); } </script>  
    </head>  
  <body>  
+    jest używany do przekazywania informacji użytkownikowi. </p> 
+    Użytkownik musi kliknąć, OK, aby potwierdził jej przeczytanie. </p>
         <input type="button" onclick="show_alert()" value="Pokaż Alert Box" />  
  </body>  
 </html>    
