--- a/zadanie5_Was.html
+++ b/zadanie5_Was.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>Zadanie 5 - Wieniawa</title>
+<title>Zadanie 5 - Wasilewska</title>
 </head>
 <body>
     <h2 style="color:red;">wykonała: Kasia Wasilewska, mój numer w dzienniku 28, czyli mam układ [(28) mod 4=0] układ 4</h2>
@@ -31,3 +31,4 @@ function WinOpen_Wasilewska_4() {
 </script>
 </body>
 </html>
+
