--- a/zadanie7_Was.html
+++ b/zadanie7_Was.html
@@ -3,8 +3,8 @@
      <script type="text/javascript"> function show_alert() { alert("Uwaga!"); } </script>  
    </head>  
  <body>  
-    <p?jest używany do przekazywania informacji użytkownikowi. </p> 
-    <p></p>Użytkownik musi kliknąć, OK, aby potwierdził jej przeczytanie. </p>
+    <p></p>jest używany do przekazywania informacji użytkownikowi. </p> 
+    <p>Użytkownik musi kliknąć, OK, aby potwierdził jej przeczytanie. </p>
         <input type="button" onclick="show_alert()" value="Pokaż Alert Box" />  
  </body>  
 </html>    
