--- a/zadanie7_Was.html
+++ b/zadanie7_Was.html
@@ -3,6 +3,7 @@
      <script type="text/javascript"> function show_alert() { alert("Uwaga!"); } </script>  
    </head>  
  <body>  
+    <h2 style="font-weight: bold;">Zastosowanie:</h2>
     <p>jest używany do przekazywania informacji użytkownikowi. </p> 
     <p>Użytkownik musi kliknąć, OK, aby potwierdził jej przeczytanie. </p>
         <input type="button" onclick="show_alert()" value="Pokaż Alert Box" />  
