--- a/zadanie3_Was.html
+++ b/zadanie3_Was.html
@@ -32,6 +32,10 @@ function WinOpen_z7()
  {
 window.open("zadanie7_Was.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=200");
  }
+function WinOpen_z8() 
+ {
+window.open("zadanie8_Was.html","okienko_z8","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=200");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -53,6 +57,7 @@ function okno_zamknij()
 	<input type="button" name="zadanie5-Wasilewska" value="zadanie5-Wasilewska" onclick="WinOpen_z5(' ')">
 	<input type="button" name="zadanie6-Wasilewska" value="zadanie6-Wasilewska" onclick="WinOpen_z6(' ')">
 	<input type="button" name="zadanie7-Wasilewska" value="zadanie7-Wasilewska" onclick="WinOpen_z7(' ')">
+	<input type="button" name="zadanie8-Wasilewska" value="zadanie8-Wasilewska" onclick="WinOpen_z8(' ')">
 
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
     </form> 
