--- a/zadanie8_Was.html
+++ b/zadanie8_Was.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>    
 <head>  
+<h1 style="font-weight: bold;">Zastosowanie:</h1>
+    <p>Jest używany, jeśli chcemy zapytać użytkownika o weryfikacje, lub akceptację jakichś danych.  </p> 
+    <p>Użytkownik musi nacisnąć  „OK.” w celu akceptacji bądź „Cancel” w celu odrzucenia. Jeżeli zostanie  </p>
+   <p>wybrane „OK.” metoda zwraca true w przeciwnym wypadku false. </p>
 <script type="text/javascript">  
    function show_confirm()   
        {  
