--- a/zadanie9_Was.html
+++ b/zadanie9_Was.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>   
   <head> 
+    <h3 style="font-weight: bold;">Zastosowanie:</h3>
+    <p>Jest używany kiedy użytkownik ma wpisać coś np. zanim wejdzie w dany moduł strony. Np. hasło. 
+Użytkownik po wpisaniu wartość może nacisnął „OK.” albo „Cancel” Jeżeli użytkownik kliknie „OK.” 
+metoda zwraca wpisaną wartość, a w przeciwnym wypadku zwraca null. </p> 
+
      <script type="text/javascript">  
        function show_prompt()  
           {  
